--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,21 @@
-name: Manually Triggered Workflow
+name: Jira Webhook Trigger
+
 on:
+  repository_dispatch:
+    types: do-something
   workflow_dispatch:
-    inputs:
-      logLevel:
-        description: 'Log level'
-        required: true
-        default: 'warning'
-      environment:
-        description: 'Environment to deploy'
-        required: false
-        default: 'staging'
+
 jobs:
-  build:
+  jira_trigger_job:
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Perform a Task Based on Jira Trigger
+        run: echo "Triggered by Jira webhook"
+
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
