--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,3 +11,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+      - name: Print variables
+        run: |
+         echo ${{ github.event.client_payload.jira_issue_key }}
+         echo ${{ github.event.client_payload.jira_assignee }}
