--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Print Full Payload
         run: echo "${{ toJson(github.event.client_payload) }}" 
       - name: Print Issue Key
-        run: echo "Issue Key:" ${{ github.event.client_payload.issueKey }} >> $GITHUB_ENV
+        run: echo 'Issue Key=${{ github.event.client_payload.issueKey }} | jq -c .)' >> $GITHUB_ENV
       - name: Print Summary
         run: echo "Summary:" ${{ github.event.client_payload.summary }} >> $GITHUB_ENV
       - name: Print Custom Field
