--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,19 +30,17 @@ jobs:
       - name: Print Full Payload
         run: echo "${{ toJson(github.event.client_payload) }}" 
       - name: Print Issue Key
-        run: echo 'Issue Key=${{ github.event.client_payload.issueKey }} | jq -c .)' >> $GITHUB_ENV
+        run: echo 'Issue Key=${{ github.event.client_payload.issueKey }} | jq -c .)' 
       - name: Print Summary
-        run: echo 'Summary=${{ github.event.client_payload.summary }} | jq -c .)' >> $GITHUB_ENV
+        run: echo 'Summary=${{ github.event.client_payload.summary }} | jq -c .)' 
       - name: print env values
         run: cat $GITHUB_ENV
       - name: Print Custom Field
-        run: echo "snow_chg_id:" ${{ github.event.client_payload.snow_chg_id }} >> $GITHUB_ENV
+        run: echo "snow_chg_id:" ${{ github.event.client_payload.snow_chg_id }} 
       - name: Print assignee
-        run: echo "Summary:" ${{ github.event.client_payload.assignee }} >> $GITHUB_ENV
+        run: echo "Summary:" ${{ github.event.client_payload.assignee }} 
       - name: Print description
-        run: echo "Summary:" ${{ github.event.client_payload.description }} >> $GITHUB_ENV
-      - name: print env values
-        run: cat $GITHUB_ENV
+        run: echo "Summary:" ${{ github.event.client_payload.description }} 
       - name: Update charm id in jira
         env:
           ISSUE_KEY: echo ${{ github.event.client_payload.issueKey }}
