--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,8 +43,17 @@ jobs:
         run: echo "Summary:" ${{ github.event.client_payload.description }} 
       - name: Update charm id in jira
         env:
-          ISSUE_KEY: echo ${{ github.event.client_payload.issueKey }}
+          ISSUE_KEY: "TESTING-18"
           CHARM_ID: echo "1234567"
         run: |
           echo $CHARM_ID
           echo $ISSUE_KEY
+          curl -X PUT \
+          -u "saravanan.dhanapal@accenture.com:ATATT3xFfGF0TgYOaSE0u9k0iCfRzvb1EQWykdosPd2e-8R9Hf2VCbbSsYVBd-FVzZY2c8okBpdBOwUWHCRfd_jr5NBsaUq1S5Fv6hN3h6wwPO8Di_NaFc4EbOcCFmiomj3sJ7_w4erQH5AwtIDt2agvhewANdJHpZKzMC2Q8ZC9Jt2cCTaDb1s=0D272DE9" \
+          -H "Content-Type: application/json" \
+          -d '{
+          "fields": {
+            "customfield_10440": $CHARM_ID
+          }
+          }' \
+          "https://eqn-nextgen.atlassian.net/rest/api/3/issue/$ISSUE_KEY"
