--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,40 +20,48 @@ name: Triggered from Jira
 
 on:
   repository_dispatch:
-    types: do-something #Ensure this matches `event_type` in Jira
+    types: do-something # Ensure this matches `event_type` in Jira
 
 jobs:
   process_jira_data:
     runs-on: ubuntu-latest
-   
+
     steps:
       - name: Print Full Payload
-        run: echo "${{ toJson(github.event.client_payload) }}" 
+        run: echo "${{ toJson(github.event.client_payload) }}"
+
       - name: Print Issue Key
-        run: echo 'Issue Key=${{ github.event.client_payload.issueKey }} | jq -c .)' 
+        run: echo "Issue Key=${{ github.event.client_payload.issueKey }}"
+
       - name: Print Summary
-        run: echo 'Summary=${{ github.event.client_payload.summary }} | jq -c .)' 
-      - name: print env values
+        run: echo "Summary=${{ github.event.client_payload.summary }}"
+
+      - name: Print env values
         run: cat $GITHUB_ENV
+
       - name: Print Custom Field
-        run: echo "snow_chg_id:" ${{ github.event.client_payload.snow_chg_id }} 
+        run: echo "snow_chg_id: ${{ github.event.client_payload.snow_chg_id }}"
+
       - name: Print assignee
-        run: echo "Summary:" ${{ github.event.client_payload.assignee }} 
+        run: echo "Assignee: ${{ github.event.client_payload.assignee }}"
+
       - name: Print description
-        run: echo "Summary:" ${{ github.event.client_payload.description }} 
+        run: echo "Description: ${{ github.event.client_payload.description }}"
+
       - name: Update charm id in jira
         env:
           ISSUE_KEY: "TESTING-18"
-          CHARM_ID: echo "1234567"
+          CHARM_ID: "1234567"  # Set CHARM_ID directly
         run: |
-          echo $CHARM_ID
-          echo $ISSUE_KEY
+          echo "CHARM_ID: $CHARM_ID"
+          echo "ISSUE_KEY: $ISSUE_KEY"
           curl -X PUT \
-             -u "saravanan.dhanapal@accenture.com:ATATT3xFfGF0TgYOaSE0u9k0iCfRzvb1EQWykdosPd2e-8R9Hf2VCbbSsYVBd-FVzZY2c8okBpdBOwUWHCRfd_jr5NBsaUq1S5Fv6hN3h6wwPO8Di_NaFc4EbOcCFmiomj3sJ7_w4erQH5AwtIDt2agvhewANdJHpZKzMC2Q8ZC9Jt2cCTaDb1s=0D272DE9" \
-             -H "Content-Type: application/json" \
-             -d '{
+            -u "saravanan.dhanapal@accenture.com:ATATT3xFfGF0TgYOaSE0u9k0iCfRzvb1EQWykdosPd2e-8R9Hf2VCbbSsYVBd-FVzZY2c8okBpdBOwUWHCRfd_jr5NBsaUq1S5Fv6hN3h6wwPO8Di_NaFc4EbOcCFmiomj3sJ7_w4erQH5AwtIDt2agvhewANdJHpZKzMC2Q8ZC9Jt2cCTaDb1s=0D272DE9" \
+            -H "Content-Type: application/json" \
+            -d '{
                   "fields": {
-                      "'"customfield_10440"'": "'"$CHARM_ID"'"
-                }
+                    "customfield_10440": "'"$CHARM_ID"'"
+                  }
                 }' \
             "https://eqn-nextgen.atlassian.net/rest/api/3/issue/$ISSUE_KEY"
+
