--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,33 +27,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Print Full Payload
-        run: echo "${{ toJson(github.event.client_payload) }}"
+      # - name: Print Full Payload
+      #   run: echo "${{ toJson(github.event.client_payload) }}"
 
-      - name: Print Issue Key
-        run: echo "Issue Key=${{ github.event.client_payload.issueKey }}"
+      # - name: Print Issue Key
+      #   run: echo "Issue Key=${{ github.event.client_payload.issueKey }}"
 
-      - name: Print Summary
-        run: echo "Summary=${{ github.event.client_payload.summary }}"
+      # - name: Print Summary
+      #   run: echo "Summary=${{ github.event.client_payload.summary }}"
 
-      - name: Print env values
-        run: cat $GITHUB_ENV
+      # - name: Print env values
+      #   run: cat $GITHUB_ENV
 
-      - name: Print Custom Field
-        run: echo "snow_chg_id:" ${{ github.event.client_payload.snow_chg_id }}
+      # - name: Print Custom Field
+      #   run: echo "snow_chg_id:" ${{ github.event.client_payload.snow_chg_id }}
 
-      - name: Print assignee
-        run: echo "Assignee:" ${{ github.event.client_payload.assignee }}
+      # - name: Print assignee
+      #   run: echo "Assignee:" ${{ github.event.client_payload.assignee }}
 
-      - name: Print description
-        run: echo "Description:" ${{ github.event.client_payload.description }}
+      # - name: Print description
+      #   run: echo "Description:" ${{ github.event.client_payload.description }}
 
       - name: Update charm id in jira
-        env:
-          ISSUE_KEY: "TESTING-18"
-          CHARM_ID: "1234567"  # Set CHARM_ID directly
+        # env:
+        #   ISSUE_KEY: "TESTING-18"
+        #   CHARM_ID: "1234567"  # Set CHARM_ID directly
         run: |
-          echo "CHARM_ID: $CHARM_ID"
-          echo "ISSUE_KEY: $ISSUE_KEY"
+           set -x
+           chmod +x ./script/jwt-token.sh
+           ./script/jwt-token.sh
          
 
