--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,8 +55,7 @@ jobs:
         #   CHARM_ID: "1234567"  # Set CHARM_ID directly
         run: |
            set -x
-           cd .github/workflows/script
-           chmod +x jwt-token.sh
-           ./jwt-token.sh
+           chmod +x .github/workflows/script/jwt-token.sh
+           sh .github/workflows/script/jwt-token.sh
          
 
