--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,6 +87,11 @@ jobs:
            # SAP_CLIENT_SECRET: tttRQgsmV4ocIuJa
            # SAP_TOKEN_URL: https://devequinor.test.apimanagement.eu10.hana.ondemand.com:443/v2/oauth2/token
         run: |
+              response=$(curl -X GET \
+              -u "${{ secrets.JIRA_API_USER }}:${{ secrets.JIRA_API_TOKEN }}" \
+              -H "Content-Type: application/json" \
+               https://eqn-nextgen.atlassian.net/rest/api/2/issue/TESTING-18| grep -o '"customfield_10440":"[^"]*"' | sed 's/.*:"//;s/"$//')
+              echo $response
            # Use curl to get the token
            # response=$(curl -s -X POST "$SAP_TOKEN_URL" \
            #   -H "Content-Type: application/x-www-form-urlencoded" \
@@ -118,8 +123,4 @@ jobs:
            # }' \
            # "https://eqn-nextgen.atlassian.net/rest/api/3/issue/TESTING-18/transitions"
 
-           response=$(curl -x GET \
-           -u "${{ secrets.JIRA_API_USER }}:${{ secrets.JIRA_API_TOKEN }}" \
-           -H "Content-Type: application/json" \
-            https://eqn-nextgen.atlassian.net/rest/api/2/issue/TESTING-18| grep -o '"customfield_10440":"[^"]*"' | sed 's/.*:"//;s/"$//')
-           echo $response
+         
