--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -92,14 +92,33 @@ jobs:
               -H "Content-Type: application/json" \
                https://eqn-nextgen.atlassian.net/rest/api/2/issue/TESTING-18| grep -o '"customfield_10440":"[^"]*"' | sed 's/.*:"//;s/"$//')
               echo $response
-           # Use curl to get the token
-           # response=$(curl -s -X POST "$SAP_TOKEN_URL" \
-           #   -H "Content-Type: application/x-www-form-urlencoded" \
-           #   -u "$SAP_CLIENT_ID:$SAP_CLIENT_SECRET" \
-           #   -d "grant_type=client_credentials")
-           
-           # # Parse the access token
-           # token=$(echo "$response" | jq -r '.access_token')
+              echo "response_code=$response_code" >> $GITHUB_ENV
+
+      - name: Check response code and echo success
+        run: |
+          if [ -n "$response_code" ]; then
+            echo "Success"
+            response_code=$(curl -o /dev/null -s -w "%{http_code}" -X PUT \
+            -u "$JIRA_API_USER:$JIRA_API_TOKEN" \
+            -H "Content-Type: application/json" \
+            -d '{
+                  "fields": {
+                    "customfield_10440": "Charm_id_old:" $response_code,"charm_id_new: 1234567" 
+                  }
+                }' \
+            "https://eqn-nextgen.atlassian.net/rest/api/3/issue/$ISSUE_KEY")
+          else
+            response_code=$(curl -o /dev/null -s -w "%{http_code}" -X PUT \
+            -u "$JIRA_API_USER:$JIRA_API_TOKEN" \
+            -H "Content-Type: application/json" \
+            -d '{
+                  "fields": {
+                    "customfield_10440": "'123455'"
+                  }
+                }' \
+            "https://eqn-nextgen.atlassian.net/rest/api/3/issue/$ISSUE_KEY")
+          fi
+        
    
            # # Check if the token is empty
            # if [ -z "$token" ]; then
