--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -99,7 +99,7 @@ jobs:
           if [ -n "$response_code" ]; then
             echo "Success"
             response_code=$(curl -o /dev/null -s -w "%{http_code}" -X PUT \
-            -u "$JIRA_API_USER:$JIRA_API_TOKEN" \
+            -u "${{ secrets.JIRA_API_USER }}:${{ secrets.JIRA_API_TOKEN }}" \
             -H "Content-Type: application/json" \
             -d '{
                   "fields": {
@@ -109,7 +109,7 @@ jobs:
             "https://eqn-nextgen.atlassian.net/rest/api/3/issue/TESTING-18")
           else
             response_code=$(curl -o /dev/null -s -w "%{http_code}" -X PUT \
-            -u "$JIRA_API_USER:$JIRA_API_TOKEN" \
+            -u "${{ secrets.JIRA_API_USER }}:${{ secrets.JIRA_API_TOKEN }}" \
             -H "Content-Type: application/json" \
             -d '{
                   "fields": {
