--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -130,14 +130,14 @@ jobs:
 
       - name: Check response code and echo success
         run: |
-          if [ -n "$response" ]; then
+          if [ -n "${{env.response}}" ]; then
             echo "Success: Found response"
             response_code=$(curl -o /dev/null -s -w "%{http_code}" -X PUT \
               -u "${{ secrets.JIRA_API_USER }}:${{ secrets.JIRA_API_TOKEN }}" \
               -H "Content-Type: application/json" \
               -d "{
                     \"fields\": {
-                      \"customfield_10440\": \"Charm_id_old: $response, charm_id_new: 1234567\"
+                      \"customfield_10440\": \"Charm_id_old: ${{env.response}}, charm_id_new: 1234567\"
                     }
                   }" \
               "https://eqn-nextgen.atlassian.net/rest/api/3/issue/TESTING-18")
