--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,10 @@ jobs:
           RESULT=$(python -c "import json, sys; data = json.loads(sys.argv[1]); ids = [(item['id'], item['name']) for item in data]; print(ids)" "$response")
           echo "RESULT=$RESULT" >> $GITHUB_ENV
           echo $RESULT
+          python3 - <<EOF
+          for i in range(len(${{env.RESULT}})):
+            Print(i)
+          EOF
     
            
                         
