--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
                     --header 'Authorization: Bearer ca42f96c-8c1e-4868-b0cd-5d1f7ad57f21')
           RESULT=$(python -c "import json, sys; data = json.loads(sys.argv[1]); ids = [(item['id'], item['name']) for item in data]; print(ids)" "$response")
           echo "RESULT=$RESULT" >> $GITHUB_ENV
-          echo $RESULT
+          # echo $RESULT
           python3 - <<EOF
           val = """${{ env.RESULT }}"""
           for i in range(len(val)):
