--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Process Data in Python
         run: |
           python3 - <<EOF
-          import json
+          import json,requests
           import os
           
           # Get the environment variable
@@ -58,7 +58,20 @@ jobs:
           try:
               data = json.loads(val)  # Ensure it's parsed as JSON
               for item in data:
-                  print(f"Test ID: {item[0]}, Test Name: {item[1]}")
+                url = "https://equinor.qtestnet.com/api/v3/projects/119783/test-runs?parentId=7409360&parentType=test-suite"
+                payload = json.dumps({
+                          "name": {item[1]},
+                          "test_case": {
+                            "id": {item[0]}
+                          }
+                        })
+                headers = {
+                  'Content-Type': 'application/json',
+                  'Authorization': 'Bearer ca42f96c-8c1e-4868-b0cd-5d1f7ad57f21'
+                }
+                response = requests.request("POST", url, headers=headers, data=payload)
+
+                print(response.text)
           except json.JSONDecodeError as e:
               print(f"Error parsing JSON: {e}")
           EOF
